--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,28 @@ body nav img {
 
 #device-cat {
     background-image: url(/img/device-categories/banner_welcome_page_prodotti_072015.jpg);
-    background-size: cover;
-    
+    background-size: cover;   
+}
+
+#all-smart {
+    background-image: url(/img/all-smartlife/bannersmart.png)
+}
+
+#all-smart h2{
+    color: azure;
+}
+
+.list-group {
+    float:left;
+    margin: auto;
+    margin-left:auto;
+    margin-right: 20px;
+    margin-bottom: auto;
+    width: 20%;
+}
+
+.list-group-item {
+    display: block;
 }
 
 .col-sm-6 {
@@ -64,6 +84,11 @@ body nav img {
   /* Set the fixed height of the footer here */
   height: 40px;
   background-color: #f5f5f5;
+    margin-top: 20px;
+}
+
+.footer p {
+    padding: 10px;
 }
 
 
