--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,53 @@ body nav img {
 
 
 /* all smart-life  */
-#all-smart {
-    background-image: url(/img/all-smartlife/bannersmart.png) 
+
+.page-header {
+    border: 0px;
 }
+
+#bannertv h1, #bannerhome h1, #bannerhealth h1, #bannerpers h1 {
+    color: white;
+    text-align: center;
+    padding: 40px;
+}
+
+
+
+#bannertv h1 p, #bannerhome h1 p, #bannerhealth h1 p, #bannerpers h1 p {
+   padding: 10px;
+}
+
+
+#all-smart {
+    background-image: url(/img/all-smartlife/bannersmart.png);
+}
+
+#bannertv {
+    background-image: url(/img/all-smartlife/01-tv-entertainment.jpg);
+    background-size:cover;
+    height: auto;
+    
+}
+
+#bannerhome {
+    background-image: url(/img/all-smartlife/03-casa-famiglia.jpg);
+    background-size:cover;
+    height: auto;
+}
+
+#bannerhealth {
+   background-image: url(/img/all-smartlife/02-salute-benessere.jpg) ;
+    background-size:cover;
+    height: auto;
+}
+
+#bannerpers {
+    background-image: url(/img/all-smartlife/04-tim-personal.jpg);
+    background-size:cover;
+    height: auto;
+}
+
 
 #all-smart h2{
     color: azure;
