--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,20 @@ body nav img {
     .blocco_as{
         margin-top: 30px;
     }
-   
+}
+
+@media (max-width: 768px)
+{
+     .dev-rel{
+        margin: 50px;
+        border: none;
+         border-style: none;
+    }
+    
+    .dev-rel img {
+        display:list-item;
+        float: none;
+    }
 }
 
 
@@ -129,7 +142,7 @@ body nav img {
 #related {
     padding:10px;
     border: 1px;
-    border-color: #10469b;
+    border-color: black;
     border-style: solid;
 }
 /* as-cat*/
@@ -271,7 +284,35 @@ body nav img {
 }
 
 /* smartlife generica */
+.dev-rel img{
+    width: 150px;
+	height: 150px;
+	border-radius: 150px;
+	-webkit-border-radius: 150px;
+	-moz-border-radius: 150px;
+	box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+    margin-left: 50px; 
+    display: inline-block;
+    
+}
 
+#blocco-img{
+    width: 80%;
+    margin-left: auto ;
+    margin-right: 20px ;
+    padding-left: 20px;
+    vertical-align: middle;
+    
+}
+
+.dev-rel {
+    border: 0.5px;
+    border-style: solid;
+    padding: 10px;
+    height: auto;
+}
 .box p{
     text-align: justify;
 }
@@ -280,7 +321,8 @@ body nav img {
     border: 1px;
     border-color: black;
     border-style: solid;
-    height:auto;    
+    height:auto;
+    
 }
 
 .prezzo-smart {
@@ -297,6 +339,7 @@ body nav img {
     float: right;
     margin-top: 20px;
 }
+
 
 /* faq */
 
