--- a/css/style.css
+++ b/css/style.css
@@ -344,6 +344,10 @@ body nav img {
 
 /* smartlife by category */
 
+.item-smart img {
+    height: 230px;
+    width: 230px;
+}
 #info{
     border: 0.5px;
     padding-top: 5px;
@@ -351,6 +355,7 @@ body nav img {
     padding-left: 10px;
     padding-right: 10px;
     border-style: solid;
+    border-color: #b3b3b3;
     
 }
 
